<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_example"
        android:title="@string/example"/>

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/menu_bounce_doge"
        android:title="@string/bounce_doge"/>

    <item android:id="@+id/menu_launch_rocket"
        android:title="@string/rocket_launch"/>

    <item android:id="@+id/menu_message"
        android:title="@string/message"/>

    <item android:id="@+id/menu_transitions"
        android:title="@string/transitions"/>

    <item android:id="@+id/menu_list"
        android:title="@string/list"/>

    <item android:id="@+id/menu_contact_list"
    android:title="@string/contact_list"/>

</menu>